Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12206

Query_cache::send_result_to_client() may corrupt THD::query_plan_flags

Details

    Description

      Due to missing parentheses in a macro definition, a statement is corrupting some flags:

      /mariadb/5.5/sql/log_slow.h:30:36: warning: left shift of negative value [-Wshift-negative-value]
      #define QPLAN_QC_NO           1 << 6
                                         ^
      /mariadb/5.5/sql/sql_cache.cc:2084:52: note: in expansion of macro 'QPLAN_QC_NO'
         thd->query_plan_flags= (thd->query_plan_flags & ~QPLAN_QC_NO) | QPLAN_QC;
      

      This bug was already fixed in MariaDB Server 10.0.22 and merged to 10.1.8 and 10.2.0.

      Attachments

        Activity

          People

            marko Marko Mäkelä
            marko Marko Mäkelä
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.